# cudaInferenceSeminar

./: README.md  cmd.txt
cppInference/: CMakeLists.txt  config.json  main_binary_classifier.cpp  main_mnist_digits.cpp  main_mnist_digits_batch3.cpp  main_recognizer.cpp  main_video_app.cpp
cppInference/app/: App.h
cppInference/config/: config.h
cppInference/config/json/: JsonConfigParser.cpp  JsonConfigParser.h
cppInference/detection/: IObjectDetector.cpp  IObjectDetector.h  TfObjDetApiDetector.cpp  TfObjDetApiDetector.h
cppInference/detection/common/: logging.h  util.cpp
cppInference/videoio/: FileCapture.cpp  FileCapture.h  IVideoCapture.h
pythonTrain/: train_minist_digits.py
pythonTrain/TensorflowDetectionApi2Space/: object_detection_camera.py
pythonTrain/TensorflowDetectionApi2Space/scripts/: find_invalid_annotations.py  replace_data_xml.py
pythonTrain/TensorflowDetectionApi2Space/workspace/deployment/: onnx2engine.sh  onnx2engine_all.sh
pythonTrain/TensorflowDetectionApi2Space/workspace/training/: cmd.txt  model_main_tf2.py
pythonTrain/TensorflowDetectionApi2Space/workspace/training/annotations/: .gitkeep
